项目修改为: 文件备份; 已知Bug: 无法保存备份项, 无法备份.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -94,3 +94,12 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[ConsoleVariables]
+; 关闭虚拟纹理（适用于2D工具）
+r.VirtualTextures=0
+; 关闭Lumen全局光照
+r.Lumen.Supported=0
+; 关闭Nanite
+r.Nanite=0
+; 减少纹理流送池大小
+r.Streaming.PoolSize=32
